# langgraph_teach

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.base  LICENSE  README.md  docker-compose.langgraph.yml  docker-compose.lb.yml  graph.json  langgraph.json  langsmith-standalone-notes.md  nginx-lb.conf  pyproject.toml  requirements.txt  start_server_by_pg.py  tools.py
agent_chat_ui/: eslint.config.js  package.json  prettier.config.js  tsconfig.json
agent_chat_ui/.next/: react-loadable-manifest.json  trace
agents_chat_ui/: components.json  package-lock.json  tailwind.config.js
agents_chat_ui_raw/: package.json
agents_chat_ui_v2/: components.json  eslint.config.js  next.config.ts  package.json  tsconfig.json
agents_chat_ui_v2/app/: layout.tsx  page.tsx
agents_chat_ui_v2/providers/: ChatProvider.tsx  ClientProvider.tsx
anything_chat_rag/: .dockerignore  .gitignore  Dockerfile  Dockerfile.app  README-zh.md  README.md  docker-compose.full.yml  graph.json  graph.json.bak  how_to_use.md  langgraph.json  pyproject.toml  requirements-offline-llm.txt  requirements-offline.txt  setup.py  start_server.py
easy_rag_server/: README.md  start_all.bat  start_all.sh
rag_storage/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_parse_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
src/: llms.py
(+1058 files in other folders)
