[project]
name = "langgraph-teach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "docling",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "fastmcp>=2.13.1",
    "ipython>=9.7.0",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-milvus>=0.2.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langchain-pymupdf4llm>=0.5.0",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.7",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pillow>=10,<12",
    "playwright>=1.56.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "raganything[all]>=1.2.8",
    "requests>=2.32.5",
    "tavily-python>=0.7.12",
    "uvicorn>=0.34.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
